Fixed z-index issue with player headshots and header

--- a/src/styles/Header.css
+++ b/src/styles/Header.css
@@ -4,7 +4,7 @@
   color: white !important;
   font-size: 20px;
   font-weight: 300;
-  z-index: 0;
+  z-index: 10;
 }
 
 .navbar .container {
@@ -56,6 +56,7 @@
   position: fixed;
   top: 10px;
   right: 25px;
+  z-index: 20;
 }
 
 @media (max-width : 767px) {
